@@ -1,6 +1,6 @@
 hildon-application-manager (1:2.1.14~unreleased) unstable; urgency=low
 
-  * 
+  * Fixes: NB85812.
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Wed, 04 Jun 2008 10:24:39 +0300
 
